// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataTable /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="data-table"
  >
    <div
      class="data-table__label-wrapper"
    >
      <label
        class="data-table__label"
      >
        Data Table
      </label>
    </div>
    <table
      class="table data-table__table table--zebra"
      id="1"
    >
      <caption
        class="table__caption u-is-vishidden"
      >
        This is a dataTable caption and it is required
      </caption>
      <thead
        class="table__header"
      >
        <tr
          class="table__row data-table__table"
        >
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="student"
          >
            Student
          </th>
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="status"
          >
            Status
          </th>
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="updated"
          >
            Updated
          </th>
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="completed"
          >
            Completed
          </th>
        </tr>
      </thead>
      <tbody
        class="table__body"
      >
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Flores, Juanita
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Needs Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            5/1/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            50%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Miles, Esther
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Stop and Revise
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            6/13/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            33%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Black, Marvin
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Finish Work
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            4/12/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            20%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Nguyen, Savannah
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Needs Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            12/9/2021
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            80%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Alexander, Leslie
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Continue Working
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            5/29/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            20%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Bell, Jerome
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Review Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            2/21/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            5%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Richards, Ronald
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Needs Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            6/28/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            60%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Simmons, Brooklyn
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Stop and Revise
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            4/18/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            40%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Williamson, Cameron
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Finish Work
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            5/14/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            50%
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<DataTable /> Filters story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="data-table data-table--filters"
  >
    <div
      class="data-table__label-wrapper"
    >
      <label
        class="data-table__label"
      >
        Data Table
      </label>
      <button
        class="clickable-style button button--secondary clickable-style--md clickable-style--secondary clickable-style--brand"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.375rem"
          style="--icon-size: 1.375rem;"
          width="1.375rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#filter-list"
          />
        </svg>
        Filters
      </button>
    </div>
    <table
      class="table data-table__table table--zebra"
      id="3"
    >
      <caption
        class="table__caption u-is-vishidden"
      >
        This is a dataTable caption and it is required
      </caption>
      <thead
        class="table__header"
      >
        <tr
          class="table__row data-table__table"
        >
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="student"
          >
            Student
          </th>
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="status"
          >
            Status
          </th>
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="updated"
          >
            Updated
          </th>
          <th
            class="table__header-cell data-table__column data-table__header-cell table-header-cell--none"
            selector="completed"
          >
            Completed
          </th>
        </tr>
      </thead>
      <tbody
        class="table__body"
      >
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Flores, Juanita
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Needs Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            5/1/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            50%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Miles, Esther
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Stop and Revise
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            6/13/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            33%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Black, Marvin
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Finish Work
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            4/12/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            20%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Nguyen, Savannah
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Needs Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            12/9/2021
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            80%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Alexander, Leslie
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Continue Working
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            5/29/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            20%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Bell, Jerome
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Review Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            2/21/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            5%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Richards, Ronald
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Needs Feedback
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            6/28/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            60%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Simmons, Brooklyn
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Stop and Revise
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            4/18/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            40%
          </td>
        </tr>
        <tr
          class="table__row"
        >
          <td
            class="table__cell"
            data-heading="Student"
          >
            Williamson, Cameron
          </td>
          <td
            class="table__cell"
            data-heading="Status"
          >
            Finish Work
          </td>
          <td
            class="table__cell"
            data-heading="Updated"
          >
            5/14/2022
          </td>
          <td
            class="table__cell"
            data-heading="Completed"
          >
            50%
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
